--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-*.xml filter=lfs diff=lfs merge=lfs -text lockable
+file1.xml filter=lfs diff=lfs merge=lfs -text lockable
+test.xml filter=lfs diff=lfs merge=lfs -text lockable
